--- a/bookmark.html
+++ b/bookmark.html
@@ -83,7 +83,7 @@
             </tr>
             <tr>
                 <td><a
-                        href="file:///Users/mohitsingh/Downloads/VS%20CODE/personal%20development/Trading.html"><button>
+                        href="https://mohit11122006.github.io/Bookmarks-/Trading.html"><button>
                             Trading </button></a>
                 </td>
                 <td> trading all courses</td>
