--- a/bookmark.html
+++ b/bookmark.html
@@ -21,6 +21,14 @@
 
         </thead>
         <tbody>
+            <tr>            
+                <td><a href="https://www.fmovies.gd">F MOVIES GD</a></td>
+                <td> Watch movies online free</td>
+        </tr>
+        <tr>
+            <td><a href="https://www.cineby.gd">cine by gd</a></td>
+            <td> watch movies online free </td> 
+        </tr>
             <tr>
                 <td><a target="_blank" href="https://ww7.123moviesfree.net"><button>123 movies</button></a></td>
                 <td>A free movie streaming website offering a wide range of films and TV shows.</td>
