Add link to AI voice generator in website.html

--- a/website.html
+++ b/website.html
@@ -45,6 +45,10 @@
 
             </tr>
         <tr>
+                <td><a target="_blank" href="https://www.openai.fm">AI voice genrater</a></td>
+                <td> FREE  AI VOICE GNERATER </td>
+            </tr>
+        <tr>
                 <td><a target="_blank" href="https://youtu.be/4_92hSf0dJY?si=qykG7UqODOCttG6Q"><button>Game development</button></a></td>
                 <td> game development</td>
             </tr>
