Replace link text with button for AI voice generator

--- a/website.html
+++ b/website.html
@@ -45,7 +45,7 @@
 
             </tr>
         <tr>
-                <td><a target="_blank" href="https://www.openai.fm">AI voice genrater</a></td>
+                <td><a target="_blank" href="https://www.openai.fm"><button>AI VOICE</button></a></td>
                 <td> FREE  AI VOICE GNERATER </td>
             </tr>
         <tr>
